# SinglePageBlog

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
Auth/: serializers.py  urls.py  views.py
Blog/: settings.py  urls.py
SinglePageBlogFrontEnd/: dockerfile  package-lock.json  package.json  vite.config.js
SinglePageBlogFrontEnd/src/: App.css  App.jsx
SinglePageBlogFrontEnd/src/components/: AddBlog.jsx  AddComment.jsx  AddLike.jsx  Comment.jsx  DetailBlog.jsx  Home.jsx  Login.jsx  SignUp.jsx  UserBlogs.jsx  UserProfile.jsx
frontend/: app.js  fetch.js  fetchapi.html  index.html  package-lock.json  package.json  style.css
frontend/src/: App.jsx
frontend/src/components/: AddBlog.jsx  AddComment.jsx  AddLike.jsx  Comment.jsx  DetailBlog.jsx  Home.jsx  Nav.jsx  RenderBlogs.jsx  UserBlogs.jsx  UserContext.jsx  UserProfile.jsx
home/: admin.py  models.py  play.py  schema.py  serializers.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_auto_20210526_1502.py  0003_alter_blog_user.py  0004_alter_blog_user.py  0005_blog_date_created.py  0006_comment_user.py  0007_blog_category.py  0008_alter_blog_category.py  0009_auto_20210605_1906.py  0010_alter_blog_category.py  0011_alter_blog_category.py
